# dataframe-schema-sync

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
