[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "dataframe-schema-sync"
version = "1.0.0"
description = "This package will read a dataframe and will infer data types while storing the structure for later retrieval"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Mark Moreno", email = "mark@securehst.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyjanitor>=0.30.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.37",
]
urls."Bug Tracker" = "https://github.com/markm-io/dataframe-schema-sync/issues"
urls.Changelog = "https://github.com/markm-io/dataframe-schema-sync/blob/main/CHANGELOG.md"
urls.documentation = "https://dataframe-schema-sync.readthedocs.io"
urls.repository = "https://github.com/markm-io/dataframe-schema-sync"

[dependency-groups]
dev = [
  "mypy>=1.14.1",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "types-pyyaml>=6.0.12.20241230",
]
docs = [
  "myst-parser>=3.0.1",
  "myst-parser>=0.16; python_version>='3.11'",
  "sphinx>=7.4.7",
  "sphinx>=4; python_version>='3.11'",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-autobuild>=2025,<2026; python_version>='3.11'",
  "sphinx-material>=0.0.36",
]

[tool.ruff]
target-version = "py39"
line-length = 120
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "S",   # flake8-bandit
  "F",   # pyflake
  "E",   # pycodestyle
  "W",   # pycodestyle
  "UP",  # pyupgrade
  "I",   # isort
  "RUF", # ruff specific
]
lint.ignore = [
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."docs/conf.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
  "E501"  # Ignore line length errors in tests
]
lint.isort.known-first-party = [ "dataframe_schema_sync", "tests" ]

[tool.pytest.ini_options]
addopts = """\
    -v
    -Wdefault
    --cov=dataframe_schema_sync
    --cov-report=term
    --cov-report=xml
    """
pythonpath = [ "src" ]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
  'docs/.*',
  'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/dataframe_schema_sync/__init__.py:__version__",
  "docs/conf.py:release",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*''',
  '''Initial [Cc]ommit.*''', # codespell:ignore
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true
